cmake_minimum_required(VERSION 3.12)
project(extract-html LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_executable(extract-html extract.cpp)
if (MSVC)
    target_compile_options(extract-html PRIVATE /W4 /permissive-)
else()
    target_compile_options(extract-html PRIVATE -Wall -Wextra -pedantic)
endif()
