cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(ETL_RT LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(scan_cxx REQUIRED PATHS /usr/lib/cmake /usr/local/lib)
add_executable(ETL_RT ${CMAKE_SOURCE_DIR}/main.cpp ${CMAKE_SOURCE_DIR}/parser.cpp ${CMAKE_SOURCE_DIR}/test.cpp ${CMAKE_SOURCE_DIR}/ir.cpp)
target_include_directories(ETL_RT PRIVATE ${scan_cxx_INCLUDE_DIRS})
target_link_libraries(ETL_RT PRIVATE scan_cxx::cxx_scan)
install(TARGETS ETL_RT DESTINATION bin)
